--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.10.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
     "mini-css-extract-plugin": "^0.6.0",
@@ -57,6 +57,7 @@
     "postcss-loader": "^3.0.0",
     "raw-loader": "^2.0.0",
     "react-test-renderer": "^16.8.3",
+    "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
