--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^2.0.0",
-    "react-test-renderer": "^16.8.3",
+    "react-testing-library": "^7.0.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
