--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-controller-audio-player",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A set of primitives to build a simple, flexible audio player",
   "main": "dist/index.js",
   "scripts": {
@@ -51,6 +51,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.10.0",
     "html-webpack-plugin": "^3.2.0",
+    "ignore-emit-webpack-plugin": "^1.0.2",
     "jest": "^24.7.1",
     "mini-css-extract-plugin": "^0.6.0",
     "postcss-cssnext": "^3.1.0",
